--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -5,329 +5,10 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 	<link href="ratchet.css" rel="stylesheet">
 	<link href="ratchet-theme.css" rel="stylesheet">
-	<style>
-		body {
-			top: env(safe-area-inset-top)
-		}
-
-		.bar-nav {
-			top: env(safe-area-inset-top)
-		}
-	</style>
+	<link href="style.css" rel="stylesheet">
 	<script src="cordova.js"></script>
 	<script src="force.js"></script>
-	<script>
 
-		// let authToken;
-		// let refToken;
-		// let userId;
-		// let editId;
-		//
-		// /* Do login */
-		// force.login(
-		// 	function () {
-		// 		console.log('Auth succeeded');
-		// 	},
-		// 	function (error) {
-		// 		console.log('Auth failed: ' + error);
-		// 	}
-		// );
-		//
-		// function logout() {
-		// 	var sfOAuthPlugin = cordova.require('com.salesforce.plugin.oauth');
-		// 	sfOAuthPlugin.logout();
-		// }
-		//
-		// function openCamera() {
-		// 	navigator.camera.getPicture(onSuccess, onFail, {
-		// 		quality: 25,
-		// 		destinationType: Camera.DestinationType.DATA_URL
-		// 	});
-		//
-		// 	function onSuccess(imageData) {
-		// 		alert('Success');
-		// 		let image = document.getElementById('photo-tag');
-		// 		image.src = 'data:image/jpeg;base64,' + imageData;
-		//
-		// 		let params = {
-		//
-		// 			path: 'services/apexrest/photo',
-		// 			method: 'POST',
-		// 			endPoint: '/',
-		// 			data:
-		// 				{
-		// 					userId: userId,
-		// 					communityId: "0DB6g000000XaXMGA0",
-		// 					basePhoto: imageData
-		// 				}
-		// 		};
-		//
-		// 		force.request(
-		// 			params,
-		// 			function successHandler() {
-		// 				alert('Success');
-		// 			},
-		// 			function errorHandler(error) {
-		// 				console.log(error);
-		// 				alert('errorUpdate' + JSON.stringify(error));
-		// 			},
-		// 			true,
-		// 			false
-		// 		);
-		//
-		// 	}
-		// 	function onFail(message) {
-		// 		alert('Failed because: ' + message);
-		// 	}
-		// }
-		//
-		// function showUser(creds) {
-		// 	fetchRecords(creds.userId, function (data) {
-		// 		userId = creds.userId;
-		// 		let users = data.records;
-		// 		authToken = creds.accessToken;
-		//
-		// 		let name = users[0].Name;
-		// 		let mediumImg = users[0].SmallBannerPhotoUrl;
-		//
-		// 		let backImageHeader = ('https://na174.lightning.force.com/' + mediumImg + '?oauth_token=' +
-		// 			authToken);
-		//
-		// 		document.getElementsByClassName('logout-btn-container')[0].style.backgroundImage = 'url(\'' +
-		// 			backImageHeader + '\')';
-		//
-		// 		document.getElementById('hello').innerText = 'Welcome ' + users[0].FirstName;
-		//
-		// 		document.getElementById('photo').innerHTML =
-		// 			'<a onclick="openCamera()"><img class="avatar" id ="photo-tag" src = "https://na174.lightning.force.com/' +
-		// 			users[0].MediumPhotoUrl +
-		// 			'?oauth_token=' +
-		// 			authToken + ' "></a>';
-		//
-		// 		document.getElementById('fname-text').innerText = users[0].FirstName;
-		// 		document.getElementById('lname-text').innerText = users[0].LastName;
-		// 		document.getElementById('nickname-text').innerText = users[0].CommunityNickname;
-		// 		document.getElementById('country-text').innerText = users[0].Country;
-		// 		document.getElementById('email-text').innerText = users[0].Email;
-		// 		document.getElementById('mobile-text').innerText = users[0].Phone;
-		//
-		// 	});
-		// }
-		//
-		//
-		// function salesforceSessionRefreshed(creds, oauth) {
-		// 	refToken = oauth.refresh_token;
-		// 	window.userID = creds.userId;
-		// 	showUser(creds);
-		//
-		// }
-		//
-		// var fetchRecords = function (credsId, successHandler) {
-		// 	var soql =
-		// 		'SELECT id,Name,Username, MobilePhone, Phone, SmallBannerPhotoUrl, CommunityNickname, MediumPhotoUrl, ' +
-		// 		'Alias,Country,Email,FirstName,LastName,IsPortalEnabled FROM User WHERE ID = \'' +
-		// 		credsId +
-		// 		'\'';
-		// 	force.query(soql, successHandler, function (error) {
-		// 		alert('Failed to fetch contacts: ' + error);
-		// 	});
-		// };
-		//
-		//
-		// function editFieldGetId(object) {
-		// 	editId = object.id;
-		// 	document.getElementById('value').placeholder = object.id;
-		// 	document.getElementById('value').type = 'text';
-		// 	if (editId === 'Phone') {
-		// 		document.getElementById('value').type = 'tel';
-		// 		document.getElementById('value').placeholder = '375_ _ _ _ _ _ _ _ _';
-		// 	}
-		// 	if (editId === 'Email') {
-		// 		document.getElementById('value').placeholder = 'Email@mail.ru';
-		// 		document.getElementById('value').type = 'email';
-		// 	}
-		// 	toggleModal();
-		// }
-		//
-		//
-		// function saveFieldAfterEdit() {
-		// 	var inputText = document.getElementById('value').value;
-		//
-		// 	if (inputText !== '') {
-		// 		force.update(
-		// 			'User',
-		// 			{'id': userId, [editId]: inputText},
-		// 			function successUpdate() {
-		// 				force.login(
-		// 					function () {
-		// 						console.log('Auth succeeded');
-		// 					},
-		// 					function (error) {
-		// 						console.log('Auth failed: ' + error);
-		// 					}
-		// 				);
-		// 				alert('Success');
-		// 				toggleModal();
-		// 			},
-		// 			function errorUpdate(error) {
-		// 				alert('errorUpdate' + error);
-		// 			}
-		// 		);
-		// 	} else {
-		// 		alert('Please, fill input field.');
-		// 	}
-		// }
-
-	</script>
-	<style>
-		table {
-
-			font-family: Arial, Helvetica, sans-serif;
-			width: 100%;
-		}
-
-		tr {
-			padding: 2%;
-			display: flex;
-			justify-content: space-between;
-		}
-
-		body {
-			width: 100%;
-			/*height: 300px;*/
-		}
-
-		.container {
-			background: rgba(170, 179, 255, 0.38);
-		}
-
-		.logout-btn-container {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			padding: 5%;
-			font-family: Arial, Helvetica, sans-serif;;
-			background-size: cover;
-		}
-
-		.welcome-text {
-			font-size: 20px;
-			font-weight: bold;
-			color: white;
-		}
-
-		.logout-btn {
-			font-family: Arial, Helvetica, sans-serif;;
-			border-radius: 7px;
-			cursor: pointer;
-			color: white;
-			font-size: 15px;
-			font-weight: bold;
-			padding: 9px 23px;
-			text-decoration: none;
-			background: rgba(244, 255, 243, 0.2) no-repeat;
-		}
-
-		.logout-btn:active {
-			position: relative;
-			top: 1px;
-		}
-
-		.avatar-container {
-			justify-content: center;
-		}
-
-		.avatar {
-			border-radius: 100px;
-			border: 5px solid rgba(16, 74, 255, 0.49);
-			width: 200px;
-			height: 200px;
-		}
-
-
-		.modal {
-			position: fixed;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			background-color: rgba(0, 0, 0, 0.5);
-			opacity: 0;
-			visibility: hidden;
-			transform: scale(1.1);
-			transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-		}
-
-		.modal-content {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			background-color: white;
-			padding: 1rem 1.5rem;
-			width: 24rem;
-			border-radius: 0.5rem;
-		}
-
-		.close-button {
-			float: right;
-			width: 1.5rem;
-			line-height: 1.5rem;
-			text-align: center;
-			cursor: pointer;
-			border-radius: 0.25rem;
-			background-color: lightgray;
-		}
-
-		.close-button:hover {
-			background-color: darkgray;
-		}
-
-		.show-modal {
-			opacity: 1;
-			visibility: visible;
-			transform: scale(1.0);
-			transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-		}
-
-		.submit-modal {
-			border-radius: 15px;
-			border: 5px solid;
-			background: rgb(64, 157, 64);
-			color: white;
-			padding: 14px 25px;
-			text-align: center;
-			text-decoration: none;
-			display: inline-block;
-		}
-
-		.submit-modal:hover,
-		.submit-modal:active {
-			background: green;
-		}
-
-		.edit-button {
-			font-family: "Roboto", sans-serif;
-			text-transform: uppercase;
-			outline: 0;
-			background: #4CAF50;
-			width: 100%;
-			padding: 5px 20px 5px;
-			color: #FFFFFF;
-			font-size: 14px;
-			cursor: pointer;
-			border-radius: 5px;
-			border: 0 solid rgba(16, 74, 255, 0.49);
-
-		}
-
-		.edit-button:hover,
-		.edit-button:active,
-		.edit-button:focus {
-			background: #43A047;
-		}
-
-	</style>
 </head>
 
 
@@ -414,24 +95,5 @@
 </table>
 
 </body>
-<script>
-	// var modal = document.querySelector('.modal');
-	// var trigger = document.querySelector('.trigger');
-	// var closeButton = document.querySelector('.close-button');
-	//
-	// function toggleModal() {
-	// 	modal.classList.toggle('show-modal');
-	// }
-	//
-	// function windowOnClick(event) {
-	// 	if (event.target === modal) {
-	// 		toggleModal();
-	// 	}
-	// }
-	//
-	// trigger.addEventListener('click', toggleModal);
-	// closeButton.addEventListener('click', toggleModal);
-	// window.addEventListener('click', windowOnClick);
-</script>
 <script src="main.js"></script>
 </html>
