fix: small fix. Before apk version.

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 	<link href="ratchet.css" rel="stylesheet">
 	<link href="ratchet-theme.css" rel="stylesheet">
-	<link href="style.css" rel="stylesheet">
+	<link href="Styles.css" rel="stylesheet">
 	<script src="cordova.js"></script>
 	<script src="force.js"></script>
+	<title>User Page</title>
 
 </head>
-
 
 <body class="container">
 
@@ -34,15 +34,15 @@
 		Logout
 	</button>
 </div>
-
 <table id="myTable">
 	<thead>
 
 	</thead>
+
 	<tbody>
 	<tr class="avatar-container">
 
-		<td id="photo" colspan="3"></td>
+		<td id="photo"></td>
 
 	</tr>
 	<tr>
